--- a/src/Weather/Weather.css
+++ b/src/Weather/Weather.css
@@ -23,7 +23,7 @@ body {
     min-height: 100vh;
     background-color: rgba(0, 0, 0, 0.3);
     /* backdrop-filter: blur(5px); */
-
+    transition: 1s;
     nav {
       width: 100%;
       padding: 30px 0;
