--- a/src/Weather/Weather.css
+++ b/src/Weather/Weather.css
@@ -23,6 +23,7 @@ body {
     min-height: 100vh;
     background-color: rgba(0, 0, 0, 0.3);
     /* backdrop-filter: blur(5px); */
+    /* -webkit-backdrop-filter: blur(5px); */
     transition: 1s;
     nav {
       width: 100%;
@@ -63,6 +64,7 @@ body {
         border: 2px solid rgba(0, 0, 0, 0.3);
         border-radius: 5px;
         backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
         margin-bottom: 30px;
         overflow: hidden;
         input,
@@ -137,6 +139,7 @@ body {
         padding: 20px;
         border-radius: 10px;
         backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
         background-color: rgba(0, 0, 0, 0.3);
         margin-bottom: 20px;
         .card-title {
